--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "~1.15.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.15.0",
+    "express-validator": "^3.1.2",
     "jade": "~1.11.0",
-    "mongoose": "^4.7.9",
+    "mongodb": "^2.2.19",
+    "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.0"
   },
   "main": "app.js",
