--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.14.0",
     "express-session": "^1.15.0",
     "express-validator": "^3.1.2",
+    "flash-messenger": "^1.0.6",
     "jade": "~1.11.0",
     "mongodb": "^2.2.19",
     "mongoose": "^4.8.0",
