--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
+    "express-restify-mongoose": "^4.1.3",
     "express-session": "^1.15.0",
     "express-validator": "^3.1.2",
     "flash-messenger": "^1.0.6",
     "jade": "~1.11.0",
+    "method-override": "^2.3.7",
     "mongodb": "^2.2.19",
     "mongoose": "^4.8.0",
     "morgan": "~1.7.0",
